--- a/Detector.tex
+++ b/Detector.tex
@@ -22,7 +22,7 @@ The main goal of the LHC is to provide proton-proton collisions to the experimen
 \end{equation}
 The luminosity is a machine parameter and can be expressed for beams with Gaussian-shaped profiles as  
 \begin{equation}
-  \mathcal{L} = f \cdot \frac{n_{1}n_{2}}{4 \pi \sigma_{x} \sigma{y}} \cdot F
+  \mathcal{L} = \frac{f n_{1} n_{2}}{4 \pi \sigma_{x} \sigma{y}} \cdot F
   \label{eq:lumi}
 \end{equation}
 with the revolution frequency $f$, the number of particles $n_1$ and $n_2$ contained in the two colliding bunches and the transverse beam sizes $\sigma_{x}$ ($\sigma_{y}$) in the horizontal (vertical) directions. In order to take the inclination of the two beams into account, the geomatrical correction factor $F$ is introduced. The nominal peak luminosity of the LHC is $10^{34} \, \mathrm{cm}^{-2} \, \mathrm{s}^{-1}$.\\
@@ -83,9 +83,35 @@ The tracking system with the desgin described above provides a very good impact 
 
 \subsection{Electromagnetic Calorimeter}
 \label{subsec:cms_ecal}
+The CMS experiment makes use of a homogeneous electromagnetic calorimeter (ECAL) in order to precisely measure the energy deposits of electrons and photons. It is installed around the inner tracking system covering a range up to $|\eta| = 3.0$ and consists of lead tungstate (PbW$\mathrm{O}_4$) crystals. These have been chosen as they provide a high density, short radiation length and a small Moli\`{e}re radius and hence allow to build a compact calorimeter with a fine granularity. As 80\% of the scintillation light is emitted within 25\,ns, this matches well the bunch crossing rate of the LHC machine. In order to collect the radiated light photodiodes are glued to the back of each crystal. \\
+An overview of the ECAL layout is shown in Fig.~\ref{fig:CMS_ecal}. The individual sub-components are the following:
+\begin{figure}[!tp]
+  \centering
+  \begin{tabular}{c}
+    \includegraphics[width=0.9\textwidth]{figures/cms_ecal_layout.pdf}
+  \end{tabular}
+  \caption{View of one quarter section of the CMS electromagnetic calorimeter in a transverse view. Taken from~\cite{bib:cmsptdr1}.}
+  \label{fig:CMS_ecal}
+\end{figure}
+\begin{description}
+ \item \textbf{Barrel ECAL (EB):} The barrel detector of the ECAL covers the pseudorapidity region up to $|\eta| = 1.479$. Within a radius of about 1.3\,m a total number of 61200 crystals are installed. Each of them has a length of 230\,mm resulting in a radiation length of 25.8 $\mathrm{X_0}$. Avalanche photodiodes are used to detect the emitted scintillation light.
+ \item \textbf{Endcap ECAL (EE):} The EB is complemented on each side by an endcap which consists of two d-shaped halfs. The ECAL endcaps extend from $|\eta| = 1.479$ to $|\eta| = 3.0$. In total they contain another 14648 crystals with a length of 220\,mm corresponding to 24.7 $\mathrm{X}_0$. For the collection of scintillation light vacuum phototriodes are used in the endcaps.
+ \item \textbf{Preshower (ES):} In front of the endcap crystals a preshower detector is placed. It covers the pseudorapidity range of $|\eta| = 1.653 - 2.6$. The main purpose is to identify photons emerging from the decay of neutral pions. It is a two-layer sampling calorimeter with lead as absorber material and silicon strip sensors measuring the deposited energy. The total thickness of the preshower is 20\,cm (3 $\mathrm{X_0}$).
+\end{description}
+In order to achieve a stable and uniform energy measurement across the whole ECAL an accurate calibration is of crucial importance. In addition to the calibration of the absolute energy scale especially channel-to-channel effects -- referred to as intercalibration -- have to be accounted for. This intercalibration is mainly done based on physics events as e.g. $\pi^0 \rightarrow \gamma \gamma$ or $W \rightarrow \e \nu$. Changes in the transparency of the ECAL crystals during operation caused by irradiation are monitored by a dedicated laser system injecting well defined laser pulses into the crystals via optical fibres. 
 
 \subsection{Hadronic Calorimeter}
 \label{subsec:cms_hcal}
+
+\begin{figure}[!tp]
+  \centering
+  \begin{tabular}{c}
+    \includegraphics[width=0.9\textwidth]{figures/fig_HCALdiagram.png}
+  \end{tabular}
+  \caption{Taken from~\cite{Chatrchyan:2009hw}.}
+  \label{fig:CMS_hcal}
+\end{figure}
+
 
 \subsection{Muon System}
 \label{subsec:cms_muon}
