--- a/Thesis.bib
+++ b/Thesis.bib
@@ -2808,6 +2808,21 @@ author = "S. Brandt and Ch. Peyrou and R. Sosnowski and A. Wroblewski"
       SLACcitation   = "%%CITATION = JINST,3,S08004;%%",
 }
 
+@article{Chatrchyan:2009hw,
+      author         = "Chatrchyan, S and others",
+      title          = "{Performance of CMS Hadron Calorimeter Timing and
+                        Synchronization using Test Beam, Cosmic Ray, and LHC Beam
+                        Data}",
+      collaboration  = "CMS",
+      journal        = "JINST",
+      volume         = "5",
+      pages          = "T03013",
+      doi            = "10.1088/1748-0221/5/03/T03013",
+      year           = "2010",
+      reportNumber   = "CMS-CFT-09-018",
+      SLACcitation   = "%%CITATION = ARXIV:0911.4877;%%",
+}
+
 @book{bib:cmsptdr1,
  collaboration = {CMS},
  title = {CMS Detector Performance and Software},
