--- a/Thesis.bib
+++ b/Thesis.bib
@@ -2823,6 +2823,23 @@ author = "S. Brandt and Ch. Peyrou and R. Sosnowski and A. Wroblewski"
       SLACcitation   = "%%CITATION = ARXIV:0911.4877;%%",
 }
 
+@article{Chatrchyan:2009ag,
+      author         = "Chatrchyan, S and others",
+      title          = "{Performance of the CMS Hadron Calorimeter with Cosmic
+                        Ray Muons and LHC Beam Data}",
+      collaboration  = "CMS Collaboration",
+      journal        = "JINST",
+      volume         = "5",
+      pages          = "T03012",
+      doi            = "10.1088/1748-0221/5/03/T03012",
+      year           = "2010",
+      eprint         = "0911.4991",
+      archivePrefix  = "arXiv",
+      primaryClass   = "physics.ins-det",
+      reportNumber   = "CMS-CFT-09-009",
+      SLACcitation   = "%%CITATION = ARXIV:0911.4991;%%",
+}
+
 @book{bib:cmsptdr1,
  collaboration = {CMS},
  title = {CMS Detector Performance and Software},
