--- a/Detector.tex
+++ b/Detector.tex
@@ -95,23 +95,30 @@ An overview of the ECAL layout is shown in Fig.~\ref{fig:CMS_ecal}. The individu
 \end{figure}
 \begin{description}
  \item \textbf{Barrel ECAL (EB):} The barrel detector of the ECAL covers the pseudorapidity region up to $|\eta| = 1.479$. Within a radius of about 1.3\,m a total number of 61200 crystals are installed. Each of them has a length of 230\,mm resulting in a radiation length of 25.8 $\mathrm{X_0}$. Avalanche photodiodes are used to detect the emitted scintillation light.
- \item \textbf{Endcap ECAL (EE):} The EB is complemented on each side by an endcap which consists of two d-shaped halfs. The ECAL endcaps extend from $|\eta| = 1.479$ to $|\eta| = 3.0$. In total they contain another 14648 crystals with a length of 220\,mm corresponding to 24.7 $\mathrm{X}_0$. For the collection of scintillation light vacuum phototriodes are used in the endcaps.
+ \item \textbf{Endcap ECAL (EE):} The EB is complemented on each side by an endcap which consists of two d-shaped halfs. The ECAL endcaps extend from $|\eta| = 1.479$ to $|\eta| = 3.0$. In total they contain another 14648 crystals with an individual length of 220\,mm corresponding to 24.7 $\mathrm{X}_0$. For the collection of scintillation light vacuum phototriodes are used in the endcaps.
  \item \textbf{Preshower (ES):} In front of the endcap crystals a preshower detector is placed. It covers the pseudorapidity range of $|\eta| = 1.653 - 2.6$. The main purpose is to identify photons emerging from the decay of neutral pions. It is a two-layer sampling calorimeter with lead as absorber material and silicon strip sensors measuring the deposited energy. The total thickness of the preshower is 20\,cm (3 $\mathrm{X_0}$).
 \end{description}
 In order to achieve a stable and uniform energy measurement across the whole ECAL an accurate calibration is of crucial importance. In addition to the calibration of the absolute energy scale especially channel-to-channel effects -- referred to as intercalibration -- have to be accounted for. This intercalibration is mainly done based on physics events as e.g. $\pi^0 \rightarrow \gamma \gamma$ or $W \rightarrow \e \nu$. Changes in the transparency of the ECAL crystals during operation caused by irradiation are monitored by a dedicated laser system injecting well defined laser pulses into the crystals via optical fibres. 
 
-\subsection{Hadronic Calorimeter}
+\subsection{Hadron Calorimeter}
 \label{subsec:cms_hcal}
-
+In addition to the previously described electromagnetic calorimeter, the calorimetry of the CMS experiment is completed by the hadron calorimeter (HCAL). It is designed to provide an accurate energy measurement of hadron jets and indirectly also of invisible particles like e.g. neutrinos by the determination of missing transverse energy. In order to obtain a measure of the missing transverse energy it is important that the calorimeter is hermetic in the sense that it provides a large geometric coverage to potentially measure all particles emerging from an interaction. Thus the HCAL is build such that a pseudorapidity range up to $|\eta| = 5.2$ is comprised. \\ 
+The hadron calorimeter completely surrounds the inner tracking system and the electromagnetic barrel calorimeter while it is mainly contained within the magnet system. Hence its radial dimensions are limited on the one hand by the outer circumference of the barrel ECAL and on the other hand by the inner border of the magnet coil. To ensure that the complete hadronic showers are contained in the HCAL, an additional calorimeter component is installed outside the solenoid in the barrel part. \\
+An overview of the layout of the CMS hadron calorimeter is shown in Fig.~\ref{fig:CMS_hcal}. The individual sub-components are the following:
 \begin{figure}[!tp]
   \centering
   \begin{tabular}{c}
     \includegraphics[width=0.9\textwidth]{figures/fig_HCALdiagram.png}
   \end{tabular}
-  \caption{Taken from~\cite{Chatrchyan:2009hw}.}
+  \caption{Quarter sclice through the CMS hadronic calorimeter displaying the individual HCAL sub-detector parts with the nominal interaction point located in the bottom right. Taken from~\cite{Chatrchyan:2009ag}.}
   \label{fig:CMS_hcal}
 \end{figure}
-
+\begin{description}
+ \item \textbf{Hadron barrel (HB):} The barrel part of the CMS hadron calorimeter is a typical sampling calorimeter with alternating layers of absorber material and active plastic scintillator tiles. It covers the $|\eta|$ region up to 1.392 and is composed of two half barrels each containing 36 identical azimuthal wegdes. These wedges hold the absorber plates which are flat brass plates arranged parallel to the axis of the beam. For reasons of stability the first and last layers are made of stainless steel. The 17 plastic scintillator layers alternate with the absorber plates and have a segmentation in $(\Delta \eta, \Delta \phi)$ of (0.087, 0.087). Each barrel is divided into 16\,$\eta$ regions for which the individual tiles are optically linked together using wavelength shiftig fibres forming so-called \textit{HCAL towers}. The read-out of each longitudinal tower is carried out using pixelated hybrid photodiodes.
+ \item \textbf{Hadron outer (HO):}
+ \item \textbf{Hadron endcap (HE):}
+ \item \textbf{Hadron forward (HF):}
+\end{description}
 
 \subsection{Muon System}
 \label{subsec:cms_muon}
