--- a/Detector.tex
+++ b/Detector.tex
@@ -114,7 +114,8 @@ An overview of the layout of the CMS hadron calorimeter is shown in Fig.~\ref{fi
   \label{fig:CMS_hcal}
 \end{figure}
 \begin{description}
- \item \textbf{Hadron barrel (HB):} The barrel part of the CMS hadron calorimeter is a typical sampling calorimeter with alternating layers of absorber material and active plastic scintillator tiles. It covers the $|\eta|$ region up to 1.392 and is composed of two half barrels each containing 36 identical azimuthal wegdes. These wedges hold the absorber plates which are flat brass plates arranged parallel to the axis of the beam. For reasons of stability the first and last layers are made of stainless steel. The 17 plastic scintillator layers alternate with the absorber plates and have a segmentation in $(\Delta \eta, \Delta \phi)$ of (0.087, 0.087). Each barrel is divided into 16\,$\eta$ regions for which the individual tiles are optically linked together using wavelength shiftig fibres forming so-called \textit{HCAL towers}. The read-out of each longitudinal tower is carried out using pixelated hybrid photodiodes.
+ \item \textbf{Hadron barrel (HB):} The barrel part of the CMS hadron calorimeter is a typical sampling calorimeter with alternating layers of absorber material and active plastic scintillator tiles. It covers the $|\eta|$ region up to 1.392 and is composed of two half barrels each containing 36 identical azimuthal wegdes. These wedges hold the absorber plates which are flat brass plates arranged parallel to the axis of the beam. For reasons of stability the first and last layers are made of stainless steel. The total thickness of the absorber material ranges from 5.82 interactions lengths ($\lambda_I$) at $|\eta| = 0.0$ to 10.6\,$\lambda_I$ at $|\eta| = 1.3$. The 17 active scintillator layers alternate with the absorber plates and have a segmentation in $(\Delta \eta, \Delta \phi)$ of (0.087, 0.087).\\
+Each half barrel is divided into 16 $\eta$-regions for which the individual tiles are optically linked together using wavelength shiftig fibres and thus form so-called \textit{HCAL towers}. The read-out of each longitudinal tower is carried out using pixelated hybrid photodiodes.
  \item \textbf{Hadron outer (HO):}
  \item \textbf{Hadron endcap (HE):}
  \item \textbf{Hadron forward (HF):}
