--- a/Detector.tex
+++ b/Detector.tex
@@ -8,9 +8,9 @@ Before the protons are injected into the LHC they are already pre-accelerated in
 \begin{figure}[!tp]
   \centering
   \begin{tabular}{c}
-    \includegraphics[width=0.9\textwidth]{figures/AcceleratorComplex.jpg}
+    \includegraphics[width=0.9\textwidth]{figures/lhc.jpg}
   \end{tabular}
-  \caption{Illustration of the CERN accelerator complex. Numbers below the names of individual machines indicate the year of their first operation. For ring accelerators also the circumference is given. Taken from~\cite{Christiane:1260465}.}
+  \caption{Illustration of the CERN accelerator complex including the injector chain of the LHC ring. Taken from~\cite{CERNaccelerators}.}
   \label{fig:AccComplex}
 \end{figure}
 \\
