--- a/Thesis.bib
+++ b/Thesis.bib
@@ -2894,6 +2894,13 @@ author = "S. Brandt and Ch. Peyrou and R. Sosnowski and A. Wroblewski"
       note         = "\href{http://cdsweb.cern.ch/record/1260465}{CERN-DI-0812015}"
 }
 
+@unpublished{CERNaccelerators,
+      author       = "CERN",
+      title        = "LHC: the guide (English version)",
+      year         = "2009",
+      note         = "\href{http://cds.cern.ch/record/1165534/files/CERN-Brochure-2009-003-Eng.pdf}{CERN-Brochure-2009-003-Eng}"
+}
+
 @Article{bib:cmsptrd2,
  collaboration = "CMS",
      title     = "{CMS technical design report, volume II: Physics performance}",
