--- a/Theory.tex
+++ b/Theory.tex
@@ -1,7 +1,7 @@
 \section{The Standard Model of Particle Physics}
 \label{sec:sm}
 
-\subsection{Shortcomings of the Standard Model}
+\subsection{Limitations of the Standard Model}
 \label{subsec:sm_shortcomings}
 
 \section{Supersymmetry}
