--- a/Detector.tex
+++ b/Detector.tex
@@ -124,7 +124,8 @@ Similar to the ECAL also the performance of the HCAL has to be well calibrated a
 
 \subsection{Muon System}
 \label{subsec:cms_muon}
-
+The outermost part of the CMS detector -- as seen from the interaction point -- is made up of the muon system. This important component of the detector is assembled in the return yoke of the CMS magnet and consists of a central barrel cylinder which is complemented by endcap disks in the forward region. The layout is illustrated in Fig.~\ref{fig:CMS_muon}.\\
+The muon system makes use of three different types of gaseous detectors in order to precisely identify muons and measure their momenta. The different types of tracking chambers employed in the muon system are described in the following:
 \begin{figure}[!tp]
   \centering
   \begin{tabular}{c}
@@ -133,6 +134,12 @@ Similar to the ECAL also the performance of the HCAL has to be well calibrated a
   \caption{Taken from~\cite{bib:cmsptdr1}.}
   \label{fig:CMS_muon}
 \end{figure}
+
+\begin{description}
+ \item \textbf{Drift tube (DT) system:}
+ \item \textbf{Cathode strip chambers (CSC):}
+ \item \textbf{Resistive plate chambers (RPC):}
+\end{description}
 
 \subsection{Trigger System}
 \label{subsec:cms_trigger}
