--- a/Thesis.tex
+++ b/Thesis.tex
@@ -181,7 +181,7 @@ Dekan der Fakult\"{a}t f\"{u}r Mathematik, & \\
 \chapter{Experimental Setup} \label{chap:Detector}
 \input{Detector.tex}
 
-\chapter{Reconstruction Algorithms and Object Definition} \label{chap:Objects}
+\chapter{Object Reconstruction and Particle Identification} \label{chap:Objects}
 \input{Objects.tex}
 
 \chapter{Measurement of the Jet Transverse-Momentum Resolution} \label{chap:Resolution}
