--- a/Thesis.tex
+++ b/Thesis.tex
@@ -94,10 +94,12 @@ a4paper
     \thispagestyle{empty}
     \vspace*{1cm}
     \begin{doublespace} 
-      \textbf{\huge Search for New Physics}\\
-      \textbf{\huge in Events with Jets}\\
-      \textbf{\huge and Missing Transverse Momentum}\\
-      \textbf{\huge at the CMS Experiment} \\
+      \textbf{\LARGE Measurement of the}\\
+      \textbf{\LARGE Jet Transverse Momentum Resolution}\\
+      \textbf{\LARGE and }\\
+      \textbf{\LARGE Searches for New Physics in Events}\\
+      \textbf{\LARGE with Jets and Missing Transverse Momentum}\\
+      \textbf{\LARGE at the CMS Experiment} \\
       \vskip1.5cm
       \begin{Large} 
         \textbf{Dissertation\\
