--- a/Thesis.bib
+++ b/Thesis.bib
@@ -1814,6 +1814,18 @@ author = "John Ellis and J.S. Hagelin and D.V. Nanopoulos and K. Olive and M. Sr
 
 
 % --- QCD + Jets ---------------------------------------------
+@article{Catani:2000jh,
+      author         = "Catani, S. and Dittmar, M. and Soper, D.E. and Stirling,
+                        W. James and Tapprogge, S. and others",
+      title          = "{QCD}",
+      year           = "2000",
+      eprint         = "hep-ph/0005025",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "CERN-TH-2000-131, FERMILAB-CONF-00-393-T",
+      SLACcitation   = "%%CITATION = HEP-PH/0005025;%%",
+}
+
 @article{bib:HERA:pdf,
       author         = "Aaron, F.D. and others",
       title          = "{Combined Measurement and QCD Analysis of the Inclusive $e^{\pm}p$ Scattering Cross Sections at HERA}",
@@ -2030,8 +2042,8 @@ url = "http://www.sciencedirect.com/science/article/pii/S0370269311008719",
 }
 
 @misc{bib:stirling:pcom,
-  note = "W.J.~Stirling, private communication, and \url{http://www.hep.phy.cam.ac.uk/~wjs/plots/plots.html}",
-  year          = {2011}
+  note = "W.J.~Stirling, private communication",
+  year          = {2012}
 }
 
 @inproceedings{Huth:217490,
